<resources>
    <string name="app_name">RepairYourPC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="registration_instruction">If you want to report a repair, but you don\'t have an account, click the button below to register:</string>
    <string name="register_button">Register Now</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="sign_up">Sign Up Now</string>
    <string name="repairIDText">RepairID:"  "</string>
    <string name="repairStatusText">Repair Status:"  "</string>
    <string name="repairCostText">Estimated Cost:"  "</string>
    <string name="btnLogout">Log out</string>
    <string name="login_instruction">To view the status of your orders, or to place an order, please enter the following information:</string>
    <string name="welcome_information">Welcome to the application</string>
    <string name="passwordText">Password:</string>
    <string name="firstnameText">First Name</string>
    <string name="firstNameText">First Name</string>
    <string name="requiredFields">(*) Required Fields</string>
    <string name="required_fields_text">(*) Required Fields</string>
    <string name="first_name_text">First Name (*)</string>
    <string name="last_name_text">Last Name (*)</string>
    <string name="street_name_text">Street Name (*)</string>
    <string name="street_number_text">Street Number (*)</string>
    <string name="zip_code_text">Zip Code (*)</string>
    <string name="city_text">City (*)</string>
    <string name="phone_number_text">Phone Number (*)</string>
    <string name="email_address_text">Email Address (*)</string>
    <string name="problem_info_and_device_info_text">Problem info and device info:</string>
    <string name="manufacturer_text">Manufacturer</string>
    <string name="kind_of_computer_hardware_text">Kind of computer hardware (*)</string>
    <string name="type_model_text">Type / model</string>
    <string name="service_text">Service (*)</string>
    <string name="operating_system_text">Operating system (*)</string>
    <string name="description_of_the_problem_text">Description of the problem (*)</string>
    <string name="link_text">Link to zip or rar file with photos, screenshots, DxDiag report, etc. (google, dropbox, onedrive link)</string>
    <string name="login_info_text">LOGIN INFO:</string>
    <string name="password_text">Password (*)</string>
    <string name="login_text">Login (*)</string>
    <string name="register_now_text">Register Now</string>
    <string name="repairCost">\@cost</string>
    <string name="repairStatus">\@repairStatus"</string>
    <string name="repairID">\@repairID</string>
    <string name="welcome">WELCOME</string>
    <string name="firstname">FirstName</string>
    <string name="is_login">You have been successfully login </string>
    <string name="btnLogDeleteAccount">Delete account</string>
    <string name="loginText">Login:</string>

    <string-array name="Array_spinRegOrdKindOfHardware">
        <item>laptop</item>
        <item>desktop</item>
        <item>monitor</item>
        <item>other</item>
    </string-array>

    <string-array name="Array_spinRegOrdService">
        <item>post-warranty</item>
        <item>warranty</item>
    </string-array>

    <string-array name="Array_spinRegOrdOS">
        <item>macOS</item>
        <item>Windows</item>
        <item>Linux</item>
    </string-array>
    <string name="title_activity_register_order">RegisterOrderActivity</string>
    <string name="btnLogPlaceAnOrder">Place an order</string>
    <string name="btnRegOrdBack">Back</string>
    <string name="tvRegOrdRegistrationOfRepair">Registration of repair:</string>
    <string name="btnRegOrdRegisterOrder">Register order</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tvLogYourOrders">Your Orders:</string>
    <string name="tvDetRepairIdentifierText">Repair identifier:</string>
    <string name="tvDetDescriptionText">Description:</string>
    <string name="tvDetDescription">\???</string>
    <string name="tvDetRepairIdentifier">\???</string>
    <string name="tvListNoOrders">No orders</string>
    <string name="btnDetRemoveOrder">Remove order</string>
    <string name="btnLogRefresh">Refresh</string>
    <string name="tvDetRepairStatusText">Repair status:</string>
    <string name="tvDetRepairStatus">\???</string>
    <string name="tvDetEstimatedCostText">Estimated cost:</string>
    <string name="tvDetEstimatedCost">\???</string>
    <string name="tvDetPaidText">Paid:</string>
    <string name="tvDetPaid">\???</string>
    <string name="tvDetManufacturerText">Manufacturer:</string>
    <string name="tvDetManufacturer">\???</string>
    <string name="tvDetKindOfHardwareText">Kind of hardware:</string>
    <string name="tvDetKindOfHardware">\???</string>
    <string name="tvDetModelText">Type / model:</string>
    <string name="tvDetModel">\???</string>
    <string name="tvDetServiceText">Service:</string>
    <string name="tvDetService">\???</string>
    <string name="tvDetOperatingSystemText">Operating system:</string>
    <string name="tvDetOperatingSystem">\???</string>
    <string name="tvDetLinkText">Link:</string>
    <string name="tvDetLink">\???</string>
    <string name="title_activity_employee_login">EmployeeLoginActivity</string>

</resources>
