<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/image2"
    tools:context="kingapawlowska.com.repairyourpc.LoginActivity">

    <TextView
        android:id="@+id/tvLogWelcome"
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:id="@+id/tvLogFirstName"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvLogWelcome"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_login"
        android:id="@+id/tvLogMessage"
        android:textColor="#ffffff"
        android:layout_below="@+id/tvLogFirstName"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnLogDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogDeleteAccount"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogLogout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnLogPlaceAnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogPlaceAnOrder"
        android:layout_below="@+id/tvLogMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/tvLogYourOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogYourOrders"
        android:textStyle="normal|bold|italic"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:layout_below="@+id/btnLogPlaceAnOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnLogRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogRefresh"
        android:layout_above="@+id/lvLogOrders"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:id="@+id/lvLogOrders"
        android:layout_below="@+id/tvLogYourOrders"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
