<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/image4"
    tools:context="kingapawlowska.com.repairyourpc.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/required_fields_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegRequiredFields"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:text="@string/first_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegFirstName"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegFirstName"
                android:background="@color/editTextAlphaWhite"/>

            <TextView
                android:text="@string/last_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegLastname"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegLastName"
                android:background="@color/editTextAlphaWhite" />

            <TextView
                android:text="@string/street_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegStreetName"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegStreetName"
                android:background="@color/editTextAlphaWhite"/>

            <TextView
                android:text="@string/street_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegStreetNumber"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegStreetNumber"
                android:background="@color/editTextAlphaWhite" />

            <TextView
                android:text="@string/zip_code_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegZipCode"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegZipCode"
                android:background="@color/editTextAlphaWhite" />

            <TextView
                android:text="@string/city_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegCity"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegCity"
                android:background="@color/editTextAlphaWhite" />

            <TextView
                android:text="@string/phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegPhone"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegPhone"
                android:background="@color/editTextAlphaWhite" />

            <TextView
                android:text="@string/email_address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegEmail"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegEmail"
                android:background="@color/editTextAlphaWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/divider" />

            <TextView
                android:text="@string/login_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegLoginInfoText"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:text="@string/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegPassword"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegPassword"
                android:background="@color/editTextAlphaWhite"
                android:elevation="0dp"
                android:inputType="textPassword" />

            <TextView
                android:text="@string/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegLogin"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etRegLogin"
                android:background="@color/editTextAlphaWhite"
                android:textColor="@android:color/holo_red_dark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/divider3" />

            <Button
                android:text="@string/register_now_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegRegister"
                android:textAlignment="center"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
